# a32nx

./: .gitignore  CMakeLists.txt  igniter.config.mjs  package.json
.github/: CHANGELOG.md
.github/workflows/: master.yml  release.yml
docs/: README.md  a320-simvars.md
fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/sound/: sound.xml
fbw-a32nx/src/systems/atsu/: rollup.config.js
fbw-a32nx/src/systems/failures/: rollup.config.js
fbw-a32nx/src/systems/fmgc/: rollup.config.js
fbw-a32nx/src/systems/instruments/buildSrc/igniter/: tasks.mjs
fbw-a32nx/src/systems/instruments/src/EFB/StatusBar/: StatusBar.tsx
fbw-a32nx/src/systems/sentry-client/: rollup.config.js
fbw-a32nx/src/systems/simbridge-client/: rollup.config.js
fbw-a32nx/src/systems/tcas/: rollup.config.js
fbw-a380x/: README.md
fbw-a380x/src/wasm/fbw_a380/: build.sh
fbw-a380x/src/wasm/flypad-backend/: build.sh
flybywire-aircraft-a320-neo/ModelBehaviorDefs/A32NX/: Airbus.xml
flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/: flight_model.cfg
flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/model/: A320_NEO_INTERIOR.xml
flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/: panel.cfg
flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/sound/: sound.xml
flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/CDU/: A320_Neo_CDU_FlightPlanPage.js  A320_Neo_CDU_PerformancePage.js  A320_Neo_CDU_StepAltsPage.js  A320_Neo_CDU_VerticalRevisionPage.js
flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/FMC/: A32NX_FMCMainDisplay.js
scripts/: build_a32nx.js
src/behavior/src/: A32NX_Interior_Generics.xml
src/extra-backend/: CMakeLists.txt  GUIDELINES.md  README.md  TODO-Framework.md  build.sh
src/extra-backend/src/: Gauge_Extra_Backend.cpp  aircraft_prefix.h
src/extra-backend/src/DataManager/: AircraftVariable.cpp  AircraftVariable.h  CacheableVariable.cpp  CacheableVariable.h  ClientDataAreaVariable.cpp  DataDefinitionVariable.cpp  DataDefinitionVariable.h  DataManager.cpp  DataManager.h  Event.cpp  Event.h  NamedVariable.cpp  NamedVariable.h  Variable.cpp  Variable.h  WritableAircraftVariable.cpp  WritableAircraftVariable.h
src/extra-backend/src/LightingPresets/: LightingPresets.cpp  LightingPresets.h
src/extra-backend/src/Modules/AircraftPresets/: AircraftPresets.cpp  AircraftPresets.h  AircraftProcedures.h
src/extra-backend/src/Modules/Example/: ExampleModule.cpp  ExampleModule.h
src/extra-backend/src/Modules/LightingPresets/: LightingPresets.cpp  LightingPresets.h
src/extra-backend/src/Modules/Pushback/: Pushback.cpp  Pushback.h
src/extra-backend/src/MsfsHandler/: Module.cpp  Module.h  MsfsHandler.cpp  MsfsHandler.h
src/extra-backend/src/MsfsHandler/DataManager/: AircraftVariable.cpp  AircraftVariable.h  CacheableVariable.cpp  CacheableVariable.h  ClientDataAreaVariable.h  DataDefinitionVariable.cpp  DataDefinitionVariable.h  DataDefinitionVariable.hpp  DataManager.cpp  DataManager.h  DataObjectBase.h  Event.cpp  Event.h  EventBase.cpp  EventBase.h  ManagedDataObjectBase.h  NamedVariable.cpp  NamedVariable.h  SimObjectBase.cpp  SimObjectBase.h
src/extra-backend/src/lib/: IDGenerator.h  SimconnectExceptionStrings.h  Units.h  logging.h  math_utils.h  simple_assert.h  stringconcat.h
src/fadec/a320_fadec/src/: SimVars.h
src/fbw_a320/: CMakeLists.txt
src/fbw_a320/src/: FlyByWireInterface.cpp
src/flypad-backend/src/: FlyPadBackend.cpp  FlyPadBackend.h
src/flypad-backend/src/Pushback/: Pushback.cpp
src/fmgc/src/: index.ts
src/fmgc/src/efis/: EfisSymbols.ts
src/fmgc/src/flightplanning/: FlightPlanManager.ts  ManagedFlightPlan.ts
src/fmgc/src/flightplanning/data/: flightplan.ts
src/fmgc/src/guidance/: GuidanceController.ts
src/fmgc/src/guidance/lnav/: PseudoWaypoints.ts
src/fmgc/src/guidance/lnav/legs/: index.ts
src/fmgc/src/guidance/vnav/: AtmosphericConditions.ts  BisectionMethod.ts  ConstraintReader.ts  CostIndex.ts  CruiseToDescentCoordinator.ts  Predictions.ts  VerticalProfileComputationParameters.ts  VnavConfig.ts  VnavDriver.ts
src/fmgc/src/guidance/vnav/climb/: ClimbPathBuilder.ts  ClimbStrategy.ts  SpeedProfile.ts
src/fmgc/src/guidance/vnav/cruise/: CruisePathBuilder.ts
src/fmgc/src/guidance/vnav/descent/: AircraftToProfileRelation.ts  ApproachPathBuilder.ts  DescentGuidance.ts  DescentPathBuilder.ts  DescentStrategy.ts  GeometricPathBuilder.ts  InertialDistanceAlongTrack.ts  LatchedDescentGuidance.ts  TacticalDescentPathBuilder.ts
src/fmgc/src/guidance/vnav/profile/: BaseGeometryProfile.ts  NavGeometryProfile.ts  SelectedGeometryProfile.ts  TemporaryCheckpointSequence.ts
src/instruments/src/Common/: EWDMessages.tsx
src/instruments/src/EFB/: Efb.tsx  failures-orchestrator-provider.tsx
src/instruments/src/EFB/Localization/: README.md  en.json
src/instruments/src/EFB/Settings/Pages/: RealismPage.tsx
src/instruments/src/ND/: index.tsx  styles.scss
src/instruments/src/ND/elements/: TerrainMap.tsx
src/instruments/src/ND/pages/: ArcMode.tsx  RoseMode.tsx
src/instruments/src/PFD/: PFD.tsx  instrument.tsx
src/instruments/src/PFD/shared/: PFDSimvarPublisher.tsx
src/shared/src/: NavigationDisplay.ts
src/systems/a320_systems/: Cargo.toml
src/systems/a320_systems/src/: lib.rs
src/systems/a320_systems/src/hydraulic/: mod.rs
src/systems/a320_systems_wasm/src/: lib.rs
src/systems/a380_systems/src/: lib.rs
src/systems/a380_systems_wasm/src/: lib.rs
src/systems/systems/src/: lib.rs
src/systems/systems/src/navigation/: adirs.rs
src/systems/systems/src/shared/: mod.rs
src/tcas/src/components/: TcasComputer.ts
